<resources>
    <string name="app_name">MyLoginForm</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login1">LoginActivity1</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="already_a_user_login">Already a user? Login</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="gender">Gender:</string>
    <string name="enter_your_password">Your Secure Password</string>
    <string name="enter_your_email">Your Email</string>
    <string name="enter_phone_number">Your Phone Number</string>
    <string name="enter_last_name">Your Last Name</string>
    <string name="enter_first_name">Your First Name</string>
    <string name="create_account">Create account</string>
    <string name="create_account_info">We will use this info to contact you regarding booking confirmations</string>
    <string name="logo">Logo</string>
    <string name="login">Login</string>
    <string name="not_a_user_sign_up">Not a user? Sign Up</string>
    <string name="verify_otp">Verification code</string>
    <string name="enter_your_otp">Enter your OTP</string>
    <string name="sign_up">Sign Up</string>
    <string name="we_have_send_you_6_digits_otp_on_your_email">We have sent you 6 digits OTP to</string>
    <string name="resend_verification_code">Resend verification code</string>
    <string name="dental_management_system">Dental Management System</string>
    <string name="contact_denticon_com">contact@denticonsupports.com</string>
    <string name="denticon">Denticon</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="about_us">About Us</string>
    <string name="logout">Logout</string>
    <string name="hello_muhammad_ahsan">Hello, Muhammad Ahsan</string>
    <string name="refer_friends_get_rs_100_cashback"><![CDATA[Refer friends & get Rs 100 cashback]]></string>
    <string name="search_for_a_doctor">Search for a Doctor</string>
    <string name="welcome">Welcome</string>
    <string name="welcome_message">Schedule an appointment to address your\ndental concerns.</string>
    <string name="book_now">Book Now</string>
    <string name="doctor_nappointment">Doctor\nAppointment</string>
    <string name="video_nconsultation">Video\nConsultation</string>
    <string name="ai_teeth_ndisease_test">Let\'s Test\nYour Teeth</string>
    <string name="need_help">Need Help?</string>
    <string name="in_case_of_any_issues_feel_free_to_talk_our_customer_support">In case of any issues, feel free to talk our customer support</string>
    <string name="call_us_now">Call us now</string>
    <string name="using_our_new_ai_model">Using Our New AI Model</string>
    <string name="save">Save</string>
    <string name="personal_info">Personal Info</string>
    <string name="updated_profile">Update Profile</string>
    <string name="teeth_test_report">Teeth Test Report</string>
    <string name="your_personal_details">Your Personal Details</string>
    <string name="start_test">Start Test</string>
    <string name="your_city">Your City</string>
    <string name="upload_your_teeth_images">Upload your teeth images</string>
    <string name="search_your_doctor">Search your doctor</string>
</resources>
