<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn = "navigation_view">

    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/nav_home"
            android:title="@string/home"/>

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_round_person_24"
            android:title="@string/personal_info"/>

        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_baseline_auto_fix_high_24"
            android:title="@string/teeth_test_report"/>

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_baseline_search_16"
            android:title="@string/search_for_a_doctor"/>
    </group>
    <item
        android:title="">

        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/nav_logout"
                android:title="@string/logout"/>
        </menu>

    </item>

</menu>