<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="176dp"
    android:gravity="bottom"
    android:padding="16dp"
    android:background="@drawable/headerbkg"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:layout_width="180sp"
        android:layout_height="45dp"
        android:src="@drawable/logo"
        android:layout_marginBottom="5sp"
        android:contentDescription="@string/logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dental_management_system"
        android:textColor="@color/white"
        android:fontFamily="@font/poppins_medium"
        android:textSize="14sp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact_denticon_com"
        android:textColor="@color/white"
        android:fontFamily="@font/poppins_medium"
        android:textSize="14sp"
        android:layout_marginBottom="16dp"/>

</LinearLayout>