<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SettingsFragment">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="20dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/personal_info"
        android:textColor="@color/purple"
        android:textSize="28sp" />
    <!--    android:drawableStart="@drawable/ic_baseline_account_circle_32"-->
    <!--    android:drawablePadding="10dp"-->
    <!--    android:drawableTint="@color/purple"-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20sp"
        android:layout_marginEnd="30dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/fnametext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="7sp"
            android:autofillHints="no"
            android:background="@drawable/edtdesign"
            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ "
            android:fontFamily="@font/poppins_medium"
            android:hint="@string/enter_first_name"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColorHint="#546E7A"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/lnametext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="7sp"
            android:autofillHints="no"
            android:background="@drawable/edtdesign"
            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ "
            android:fontFamily="@font/poppins_medium"
            android:hint="@string/enter_last_name"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColorHint="#546E7A"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/pNotext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="7sp"
            android:autofillHints="phone"
            android:background="@drawable/edtdesign"
            android:digits="0123456789"
            android:enabled="false"
            android:fontFamily="@font/poppins_medium"
            android:hint="@string/enter_phone_number"
            android:inputType="number|none"
            android:maxLength="11"
            android:minHeight="48dp"
            android:textColorHint="#546E7A"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/citytext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="6sp"
            android:background="@drawable/edtdesign"
            android:fontFamily="@font/poppins_medium"
            android:minHeight="48dp"
            android:textSize="16sp"
            android:theme="@style/SpinnerTheme"
            tools:ignore="SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/emailtext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="7sp"
            android:autofillHints="emailAddress"
            android:background="@drawable/edtdesign"
            android:fontFamily="@font/poppins_medium"
            android:hint="@string/enter_your_email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:enabled="false"
            android:textColorHint="#546E7A"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/passtext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="7sp"
            android:autofillHints="password"
            android:background="@drawable/edtdesign"
            android:fontFamily="@font/poppins_medium"
            android:hint="@string/enter_your_password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColorHint="#546E7A"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7sp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/gender"
                android:textColor="#000"
                android:textSize="16sp" />

            <RadioGroup
                android:id="@+id/genderGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2sp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/maleradiobtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20sp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/male"
                    tools:ignore="TouchTargetSizeCheck" />

                <RadioButton
                    android:id="@+id/femaleradiobtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/female"
                    tools:ignore="TouchTargetSizeCheck" />
            </RadioGroup>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="20sp"
        android:gravity="bottom"
        android:orientation="vertical">

        <Button
            android:id="@+id/updateProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edtdesign"
            android:backgroundTint="@color/purple"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/updated_profile"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </LinearLayout>

</LinearLayout>

