<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eee"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".LoginActivity1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40sp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="30sp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/dmsLogo"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_marginBottom="10sp"
            android:contentDescription="@string/logo"
            android:src="@drawable/dmslogo" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/login"
            android:textColor="@color/purple"
            android:textSize="24sp" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/create_account_info"
            android:textColor="@color/lightPurple"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/errorText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Invalid Email address or password"
            android:textColor="@color/red"
            android:fontFamily="@font/poppins_medium"
            android:visibility="invisible"
            android:textSize="14sp"/>

        <EditText
            android:id="@+id/loginemailtext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="15sp"
            android:autofillHints="emailAddress"
            android:background="@drawable/edtdesign"
            android:fontFamily="@font/poppins_medium"
            android:hint="@string/enter_your_email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:textColor="#000"
            android:textColorHint="#546E7A"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/loginpasstext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="7sp"
            android:autofillHints="password"
            android:background="@drawable/edtdesign"
            android:fontFamily="@font/robotomedium"
            android:hint="@string/enter_your_password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColor="#000"
            android:textColorHint="#546E7A"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp"
        android:background="@drawable/wave"
        android:orientation="vertical">

        <Button
            android:id="@+id/loginbutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="15sp"
            android:background="@drawable/btndesign"
            android:backgroundTint="#fff"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/next"
            android:textAllCaps="false"
            android:textColor="@color/purple"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/logintext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/poppins_semibold"
            android:onClick="Reg_Click"
            android:text="@string/not_a_user_sign_up"
            android:textColor="@color/white" />
    </LinearLayout>
</LinearLayout>