<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#eee"
    android:gravity="center"
    tools:context=".SigupActivity">

    <!-- COde FOR FRAGMENTS-->
    <!-- Frame Layout -->
    <!--    <FrameLayout-->
    <!--        android:id="@+id/fragment_container"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        />-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30sp"
        android:layout_marginTop="40sp"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/dmsLogo"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/dmslogo"
            android:layout_marginBottom="10sp"/>
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_account"
            android:fontFamily="@font/poppins_semibold"
            android:textSize="24sp"
            android:textColor="@color/purple"
            />
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_account_info"
            android:fontFamily="@font/poppins_medium"
            android:textSize="14sp"
            android:textColor="@color/lightPurple"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:orientation="vertical">
        <!-- <LinearLayout-->
        <!-- android:layout_width="wrap_content"-->
        <!-- android:layout_height="wrap_content"-->
        <!-- android:orientation="vertical"-->
        <!-- android:layout_gravity="center">-->
        <!-- <de.hdodenhof.circleimageview.CircleImageView-->
        <!--  android:id="@+id/roundImageView"-->
        <!--  android:layout_width="120dp"-->
        <!--  android:layout_height="120dp"-->
        <!--  app:civ_border_width="2dp"-->
        <!--  app:civ_border_color="#FFFF"-->
        <!--  app:civ_border_overlay="true"/>-->

        <!--  <TextView-->
        <!--  android:id="@+id/uploadimagelink"-->
        <!--  android:layout_width="match_parent"-->
        <!--  android:layout_height="wrap_content"-->
        <!--  android:text="Upload Image"-->
        <!--  android:gravity="center"-->
        <!--  android:textSize="16dp"/>-->
        <!--  </LinearLayout>-->
        <EditText
            android:id="@+id/fnametext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="7sp"
            android:background="@drawable/edtdesign"
            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ "
            android:fontFamily="@font/poppins_medium"
            android:hint="@string/enter_first_name"
            android:inputType="text"
            android:minHeight="48dp"
            android:textSize="16sp"
            android:textColorHint="#546E7A"
            android:autofillHints="no" />

        <EditText
            android:id="@+id/lnametext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="7sp"
            android:background="@drawable/edtdesign"
            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ "
            android:fontFamily="@font/poppins_medium"
            android:hint="@string/enter_last_name"
            android:inputType="text"
            android:minHeight="48dp"
            android:textSize="16sp"
            android:textColorHint="#546E7A"
            android:autofillHints="no"/>

        <EditText
            android:id="@+id/pNotext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="7sp"
            android:autofillHints="phone"
            android:background="@drawable/edtdesign"
            android:fontFamily="@font/poppins_medium"
            android:hint="@string/enter_phone_number"
            android:inputType="number|none"
            android:maxLength="11"
            android:digits="0123456789"
            android:minHeight="48dp"
            android:textColorHint="#546E7A"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/citytext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="6sp"
            android:background="@drawable/edtdesign"
            android:fontFamily="@font/poppins_medium"
            android:minHeight="48dp"
            android:textSize="16sp"
            android:theme="@style/SpinnerTheme"
            tools:ignore="SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/emailtext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="7sp"
            android:background="@drawable/edtdesign"
            android:fontFamily="@font/poppins_medium"
            android:hint="@string/enter_your_email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:textSize="16sp"
            android:textColorHint="#546E7A"
            android:autofillHints="emailAddress"/>

        <EditText
            android:id="@+id/passtext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="7sp"
            android:autofillHints="password"
            android:background="@drawable/edtdesign"
            android:fontFamily="@font/poppins_medium"
            android:hint="@string/enter_your_password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColorHint="#546E7A"
            android:textSize="16sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp">

            <TextView
                android:id="@+id/gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7sp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/gender"
                android:textColor="#000"
                android:textSize="16sp" />

            <RadioGroup
                android:id="@+id/genderGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2sp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/maleradiobtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20sp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/male"
                    tools:ignore="TouchTargetSizeCheck" />

                <RadioButton
                    android:id="@+id/femaleradiobtn"
                    android:layout_width="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:layout_height="wrap_content"
                    android:text="@string/female"
                    tools:ignore="TouchTargetSizeCheck" />
            </RadioGroup>

        </LinearLayout>
        <!-- <TextView-->
        <!-- android:id="@+id/t2"-->
        <!-- android:layout_width="match_parent"-->
        <!-- android:layout_height="match_parent"-->
        <!-- android:visibility="invisible"-->
        <!-- android:textColor="#FF0000"/>-->


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/wave"
        android:orientation="vertical">

        <Button
            android:id="@+id/nextBtn"
            android:layout_marginHorizontal="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/poppins_medium"
            android:background="@drawable/btndesign"
            android:backgroundTint="#fff"
            android:textSize="16sp"
            android:layout_marginVertical="15sp"
            android:text="@string/next"
            android:textAllCaps="false"
            android:textColor="@color/purple" />

        <TextView
            android:id="@+id/logintext"
            android:layout_marginHorizontal="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:textColor="@color/white"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/already_a_user_login" />
    </LinearLayout>

</LinearLayout>